--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,7 @@
     <nav class = "topnav">
       <%= link_to "All Merchants", "/merchants"%>
       <%= link_to "All Items", "/items"%>
+      <%= link_to "Register", "/register"%>
       <%= link_to "Cart: #{cart.total_items}", "/cart" %>
     </nav>
     <% flash.each do |name, msg| %>
