Completes us 12. I forgot to checkout to us12 branch before making corrections.

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -3,17 +3,17 @@
 <%= form_tag("/register") do %>
   <section>
     <%= label_tag "Name: " %>
-    <%= text_field_tag :name %>
+    <%= text_field_tag :name, @user.name %>
     <%= label_tag "Street Address: " %>
-    <%= text_field_tag :street_address %>
+    <%= text_field_tag :street_address, @user.street_address %>
     <%= label_tag "City: " %>
-    <%= text_field_tag :city %>
+    <%= text_field_tag :city, @user.city %>
     <%= label_tag "State: " %>
-    <%= text_field_tag :state %>
+    <%= text_field_tag :state, @user.state %>
     <%= label_tag "Zip Code: " %>
-    <%= text_field_tag :zip %>
+    <%= text_field_tag :zip, @user.zip %>
     <%= label_tag "Email Address: " %>
-    <%= text_field_tag :email %>
+    <%= text_field_tag :email%>
     <%= label_tag "Password: " %>
     <%= text_field_tag :password %>
     <%= label_tag "Confirm Password: " %>
