--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,13 @@
       <%= link_to "All Merchants", "/merchants"%>
       <%= link_to "All Items", "/items"%>
       <%= link_to "Register", "/register"%>
-      <%= link_to "Login", "/login"%>
+        <% if current_user %>
+          <%= link_to "Logout" %>
+          <%= link_to "Profile" %>
+        <% else %>
+          <%= link_to "Register", "/register" %>
+          <%= link_to "Login", "/login"%>
+        <% end %>
       <%= link_to "Cart: #{cart.total_items}", "/cart" %>
     </nav>
     <% flash.each do |name, msg| %>
