--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,7 @@
         <% if current_user %>
           <%= link_to "Logout" %>
           <%= link_to "Profile" %>
+          <p><%= "Logged in as #{current_user.name}" %></p>
         <% else %>
           <%= link_to "Register", "/register" %>
           <%= link_to "Login", "/login"%>
