Add merchant nav test and add link to application html

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,6 +17,11 @@
           <%= link_to "Logout" %>
           <%= link_to "Profile" %>
           <p><%= "Logged in as #{current_user.name}" %></p>
+        <% elsif merchant%>
+          <%= link_to "Logout" %>
+          <%= link_to "Profile" %>
+          <p><%= "Logged in as #{current_user.name}" %></p>
+          <%= link_to "Dashboard" %>
         <% else %>
           <%= link_to "Register", "/register" %>
           <%= link_to "Login", "/login"%>
