--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,6 +18,11 @@
           <%= link_to "Profile", "/profile" %>
           <%= link_to "Dashboard", "/merchant" %>
           <p><%= "Logged in as #{current_user.name}" %></p>
+        <% elsif current_admin?%>
+          <%= link_to "All Users", "/admin/users" %>
+          <%= link_to "Dashboard", "/admin" %>
+          <%= link_to "Profile", "/profile" %>
+          <%= link_to "Logout" %>
         <% elsif current_user%>
           <%= link_to "Logout" %>
           <%= link_to "Profile", "/profile" %>
@@ -25,8 +30,8 @@
         <% else %>
           <%= link_to "Register", "/register" %>
           <%= link_to "Login", "/login"%>
+          <%= link_to "Cart: #{cart.total_items}", "/cart" %>
         <% end %>
-      <%= link_to "Cart: #{cart.total_items}", "/cart" %>
     </nav>
     <% flash.each do |name, msg| %>
       <div class= "<%=name%>-flash">
