--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,18 +14,21 @@
       <%= link_to "All Merchants", "/merchants"%>
       <%= link_to "All Items", "/items"%>
         <% if merchant? %>
-          <%= link_to "Logout" %>
+          <%= link_to "Logout", "/logout" %>
           <%= link_to "Profile", "/profile" %>
           <%= link_to "Dashboard", "/merchant" %>
+          <%= link_to "Cart: #{cart.total_items}", "/cart" %>
           <p><%= "Logged in as #{current_user.name}" %></p>
         <% elsif current_admin?%>
           <%= link_to "All Users", "/admin/users" %>
           <%= link_to "Dashboard", "/admin" %>
           <%= link_to "Profile", "/profile" %>
-          <%= link_to "Logout" %>
+          <%= link_to "Logout", "/logout" %>
+          <%= link_to "Cart: #{cart.total_items}", "/cart" %>
         <% elsif current_user%>
-          <%= link_to "Logout" %>
+          <%= link_to "Logout", "/logout" %>
           <%= link_to "Profile", "/profile" %>
+          <%= link_to "Cart: #{cart.total_items}", "/cart" %>
           <p><%= "Logged in as #{current_user.name}" %></p>
         <% else %>
           <%= link_to "Register", "/register" %>
