--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -5,8 +5,11 @@
   <h1>All Items</h1>
 <% end %>
   <section class="right-pane">
-    <h3> Item Statistics </h3>
-<%= @items.top_five_items %>
+    <h3> Item Statistics </h3><br>
+    <h4>Top Five Bought</h4>
+<% @items.top_five_items.each do |item| %>
+  <%= "#{item.name}: Quantity Bought: #{item.item_orders.pluck(:quantity).flatten.first}" %><br>
+<% end %>
   </section>
 <section class="grid-container">
   <% @items.each do |item| %>
