Update link for edit info to actually do something

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,5 +7,5 @@
     <%= current_user.state %><br>
     <%= current_user.zip %><br>
     <%= current_user.email %><br>
-    <%= link_to "Edit My Info" %><br>
+    <%= link_to "Edit My Info", "/profile/edit" %><br>
 </ul></h3>
