add links to add and subtract the quantity in the cart

--- a/app/views/cart/show.html.erb
+++ b/app/views/cart/show.html.erb
@@ -30,8 +30,12 @@
       </td>
       <td>
         <center>
-          <p><%=quantity%></p>
-          <p><%= link_to "Remove", "/cart/#{item.id}",method: :delete %></p>
+            <p>
+              <%= link_to '-', "/cart?increment_decrement=decrement&item_id=#{item.id}", method: :patch%>
+              <%= quantity %>
+              <%= link_to '+', "/cart?increment_decrement=increment&item_id=#{item.id}", method: :patch%>
+            </p>
+    <%= link_to "Remove", "/cart/#{item.id}",method: :delete%>
         </center>
         </td>
       <td>
