US:21 Complete, User Can Edit their Password

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,4 +8,6 @@
     <%= current_user.zip %><br>
     <%= current_user.email %><br>
     <%= link_to "Edit My Info", "/profile/edit" %><br>
+    <%= link_to "Edit My Password", "/profile/password" %><br>
+
 </ul></h3>
