--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -8,11 +8,11 @@
     <h3> Item Statistics </h3><br>
     <h4>Top Five Bought</h4>
     <% @items.top_five_items.each do |item| %>
-      <li><%= "#{item.name}: Quantity Bought: #{item.item_orders.pluck(:quantity).flatten.first}" %></li>
+      <li><%= "#{item.name}: Quantity Bought: #{item.total}" %></li>
     <% end %><br>
     <h4>Five Least Popular Items</h4>
     <% @items.five_least_popular_items.each do |item| %>
-      <li><%= "#{item.name}: Quantity Bought: #{item.item_orders.pluck(:quantity).flatten.first}" %></li>
+      <li><%= "#{item.name}: Quantity Bought: #{item.total}" %></li>
     <% end %>
   </section>
 <section class="grid-container">
