--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -9,5 +9,7 @@
     <%= current_user.email %><br>
     <%= link_to "Edit My Info", "/profile/edit" %><br>
     <%= link_to "Edit My Password", "/profile/password" %><br>
+    <%= link_to "My Orders", "/profile/orders" %><br>
 
 </ul></h3>
+
