Update user_orders view to show id, date created, date updated, status, total items, and grand total

--- a/app/views/user_orders/index.html.erb
+++ b/app/views/user_orders/index.html.erb
@@ -2,5 +2,7 @@
   <%=order.id%><br/>
   <%=order.created_at%><br/>
   <%=order.updated_at%><br/>
+  <%=order.status%><br/>
   <%=order.total_items%><br/>
+  <%=order.grandtotal%><br/>
 <%end%>
