User views a Order show page

--- a/app/views/user_orders/index.html.erb
+++ b/app/views/user_orders/index.html.erb
@@ -5,4 +5,5 @@
   <%=order.status%><br/>
   <%=order.total_items%><br/>
   <%=order.grandtotal%><br/>
+  <%= link_to "View Order", "/profile/orders/#{order.id}" %>
 <%end%>
