--- a/app/views/admin/merchants/index.html.erb
+++ b/app/views/admin/merchants/index.html.erb
@@ -1,3 +1,3 @@
 <h1><%= @merchants.each do |merchant| %></h1>
-<p><%= link_to merchant.name, merchant_path(merchant.id) %></p
+<p><%= link_to merchant.name, "/admin/merchant/#{merchant.id}" %></p
   <% end %>
