--- a/app/views/merchant/items/index.html.erb
+++ b/app/views/merchant/items/index.html.erb
@@ -8,5 +8,6 @@
   <p>Item Inventory: <%= item.inventory %></p>
   <p>Item Active (True/False): <%= item.active? %></p>
   <p><%= link_to 'Deactivate', "/merchant/items/#{item.id}/disable", method: :patch %></p>
+  <p><%= link_to 'Delete', "/merchant/items/#{item.id}/destroy", method: :delete %></p>
   </section>
   <% end %>
