add link in merchant items page to add new item

--- a/app/views/merchant/items/index.html.erb
+++ b/app/views/merchant/items/index.html.erb
@@ -15,3 +15,5 @@
   <p><%= link_to 'Delete', "/merchant/items/#{item.id}/destroy", method: :delete %></p>
   </section>
   <% end %>
+
+<%= link_to "Add New Item", "/merchant/items/new" %>
