--- a/app/views/merchant/items/new.html.erb
+++ b/app/views/merchant/items/new.html.erb
@@ -2,14 +2,14 @@
 
 <%= form_for [:merchant, @item] do |f| %>
   <%= f.label :name %>
-  <%= f.text_field :name %>
+  <%= f.text_field :name%>
   <%= f.label :description %>
   <%= f.text_field :description %>
-  <%= f.label :image, 'Thumbnail Image URL' %>
+  <%= f.label :image %>
   <%= f.text_field :image %>
   <%= f.label :price %>
-  <%= f.text_field :price %>
+  <%= f.text_field :price%>
   <%= f.label :inventory, 'Current Inventory Count' %>
-  <%= f.text_field :inventory %>
+  <%= f.text_field :inventory%>
   <%= f.submit %>
 <% end %>
