--- a/app/views/merchant/items/index.html.erb
+++ b/app/views/merchant/items/index.html.erb
@@ -12,7 +12,8 @@
   <% else %>
     <%= link_to 'Deactivate', "/merchant/items/#{item.id}/disable", method: :patch %>
   <% end %></p>
-  <p><%= link_to 'Delete', "/merchant/items/#{item.id}/destroy", method: :delete %></p>
+  <%= link_to 'Delete', "/merchant/items/#{item.id}/destroy", method: :delete %>
+  <%= link_to 'Edit', "/merchant/items/#{item.id}/edit", method: :get %>
   </section>
   <% end %>
 
